Fix #1; Task 1 : Penulisan dan Urutan Import, Task 2 : Hapus code tidak terpakai, Task 3 : tidak menggunakan type any, Task 4 : usestate number, Task 5 : hapus handlescroll tidak terpakai, Task 6 : Styling scrollbar pada product category

--- a/public/scss/components/ProductCategory.module.scss
+++ b/public/scss/components/ProductCategory.module.scss
@@ -61,4 +61,16 @@
       }
     }
   }
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 5px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+  
 }
